Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50369

Canvas3D inside a loader does not free all memory when destructed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.6.0 RC
    • 5.6.0 Beta
    • Canvas3D
    • None
    • Ubuntu 12.04

      When loading & unloading a Canvas3D item in a loader, memory quickly increases and is never released.

      Attached is a simple test which run with qmlscene quickly demonstrates the problem.

        1. Canvas3dLeak.qml
          0.7 kB
          Michael Dippold
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            e0348803 Miikka Heikkinen
            mike12779 Michael Dippold
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes