Fix context leak when destroying canvas that was never properly shown.

Sharecontext gets created even if the canvas doesn't create the regular
context, but it wasn't destroyed unless regular context also existed.

Change-Id: Ib975ff65c4138000b4a2f1277fe56c9d5109c626
Task-number: QTBUG-50369
Reviewed-by: Tomi Korpipää <tomi.korpipaa@theqtcompany.com>
Reviewed-by: Pasi Keränen <pasi.keranen@theqtcompany.com>